--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,13 @@
 # Releases
 
+## Bitergia Analytics OpenSearch Dashboards 0.6.0 - (2023-09-26)
+
+**New features:**
+
+ * Add release workflow\
+   Test notes text
+
+
 ## BAP 0.5.1 - (2023-09-26)
 
 **New features:**
